Fix menu overflow for 6 items

--- a/themes/piweekly/mobile.css
+++ b/themes/piweekly/mobile.css
@@ -4,7 +4,7 @@
     }
 
     #nav ul li {
-        max-width: 20%;
+        max-width: 16%;
     }
 
     #main {
